--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@
 #landing{
     background: #2b0080;
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
     width: 100vw;
     align-items: center;
@@ -44,23 +45,17 @@
 }
 
 .text{
-    border: solid 4px #4d4dff;
     color: white;
-    font-size: 42px;
-    width: 30vw;
+    font-size: 32px;
     text-align: left;
-    padding: 12px;
+    border: 4px solid #4d4dff;
+    padding: 8px;
 }
 
 .text >p {
     padding: 12px;
 }
 
-img{
-    border: solid 4px #4d4dff ;
-    position: relative;
-    right: 5vw;
-}
 
 ul{
     list-style-type: none;
@@ -91,4 +86,18 @@ button{
 button:hover{
     background-color:black;
     color: white;
+}
+
+.card{
+    height: 500px;
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img{
+    border: 4px solid #4d4dff;
+    position: relative;
+    right: 5vw;
 }
